# ODR-AudioEnc

./: .cproject  .gitignore  .travis.yml  ChangeLog  Doxyfile  Makefile.am  README.md  TODO  TODO.md  aac-enc-dabplus-zmq.c  aac-enc-dabplus.c  alsa-dabplus-zmq.c  bootstrap  configure.ac  example_stats_receiver.py  fdk-dabplus.pc.in  libtoolame-dab.sym  mot-encoder.c  wavreader.c
contrib/: RemoteControl.h  Socket.cpp  Socket.h
contrib/edi/: Interleaver.cpp  Interleaver.h  PFT.cpp  PFT.h  TagItems.cpp  TagItems.h  TagPacket.cpp  TagPacket.h  Transport.cpp  Transport.h
contrib/edioutput/: Transport.cpp
fdk-aac/: Makefile.am  README.md
fdk-aac/libAACenc/include/: aacenc_lib.h
fdk-aac/libAACenc/src/: aacenc.cpp  aacenc_lib.cpp  qc_main.cpp
fdk-aac/libFDK/src/: mdct.cpp
fdk-aac/libMpegTPEnc/src/: tpenc_lib.cpp
fdk-aac/libSBRenc/src/: env_est.cpp  sbr_encoder.cpp
libAACenc/include/: aacenc_lib.h
libAACenc/src/: aacenc.cpp  aacenc_lib.cpp  aacenc_tns.cpp  bandwidth.cpp  bitenc.cpp  psy_configuration.cpp  psy_main.cpp  qc_main.cpp
libFDK/src/: FDK_crc.cpp
libMpegTPEnc/src/: tpenc_dab.cpp  tpenc_dab.h  tpenc_lib.cpp
libSBRenc/src/: env_est.cpp
libSYS/include/: FDK_audio.h
libtoolame-dab/: README.md  ath.c  ath.h  audio_read.c  audio_read.h  bitstream.c  bitstream.h  common.h  encode_new.c  options.h  psycho_3.c  toolame.c  toolame.h  vlc_input.c  vlc_input.h  xpad.c  xpad.h  zmqoutput.c  zmqoutput.h
m4/: alsa.m4
man/: odr-audioenc.1
src/: AACDecoder.cpp  AACDecoder.h  AVTEDIInput.cpp  AVTEDIInput.h  AVTInput.cpp  AVTInput.h  AlsaDabplus.cpp  AlsaInput.cpp  AlsaInput.h  FFMPEGInput.cpp  FFMPEGInput.h  FileInput.cpp  FileInput.h  Filter.cpp  Filter.h  GSTInput.cpp  GSTInput.h  InputInterface.h  JackInput.cpp  JackInput.h  OrderedQueue.cpp  OrderedQueue.h  Outputs.cpp  Outputs.h  PadInterface.cpp  SampleQueue.h  StatsPublish.cpp  StatsPublish.h  VLCInput.cpp  VLCInput.h  aac-enc-dabplus.c  charset-test.cpp  charset.h  common.h  dabplus-enc-alsa-zmq.cpp  dabplus-enc-file-zmq.c  dabplus-enc-file.c  dabplus-enc.cpp  dls.c  encryption.h  (+10 more)
